--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "scripts": {
     "test": "bin/test",
-    "test:run": "npm run test:apply && npm run test:recommend && npm run test:grant",
+    "test:run": "npm run test:apply && npm run test:endorse && npm run test:recommend && npm run test:grant",
     "test:apply": "asl-test ./test/apply/config.js",
+    "test:endorse": "asl-test ./test/endorse/config.js",
     "test:recommend": "asl-test ./test/recommend/config.js",
     "test:grant": "asl-test ./test/grant/config.js"
   },
