added legacy apply test runner

--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "bin/test",
     "test:run": "npm run test:apply && npm run test:endorse && npm run test:recommend && npm run test:grant",
     "test:apply": "asl-test ./test/apply/config.js",
+    "test:apply:legacy": "asl-test ./test/apply-legacy/config.js",
     "test:endorse": "asl-test ./test/endorse/config.js",
     "test:recommend": "asl-test ./test/recommend/config.js",
     "test:grant": "asl-test ./test/grant/config.js"
