--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "bin/test",
     "test:run": "npm run test:apply && npm run test:endorse && npm run test:recommend && npm run test:grant",
+    "test:run:legacy": "npm run test:apply:legacy && npm run test:endorse && npm run test:recommend npm run test:grant",
     "test:apply": "asl-test ./test/apply/config.js",
     "test:apply:legacy": "asl-test ./test/apply-legacy/config.js",
     "test:endorse": "asl-test ./test/endorse/config.js",
