Run new-style and legacy tests

--- a/.drone.yml
+++ b/.drone.yml
@@ -13,6 +13,7 @@ pipeline:
       - keycloak_password
     commands:
       - npm test -- --env dev
+      - npm test -- --env dev --legacy
     when:
       event: push
 
